--- a/BlockLoader.Tests/BlockLoader.Tests.csproj
+++ b/BlockLoader.Tests/BlockLoader.Tests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="BlockRepositoryFake.cs" />
     <Compile Include="MainWindowViewModelTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RespondentRepositoryFake.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlockLoader\BlockLoader.csproj">
