Reach calculating extracted from ViewModel

--- a/BlockLoader/BlockLoader.csproj
+++ b/BlockLoader/BlockLoader.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DataLayer\RepositoryBase.cs" />
     <Compile Include="DataLayer\Respondent.cs" />
     <Compile Include="DataLayer\RespondentRepository.cs" />
+    <Compile Include="Services\BlockReachesCalculator.cs" />
     <Compile Include="PresentationLayer\BlockViewModel.cs" />
     <Compile Include="DataLayer\IBlockRepository.cs" />
     <Compile Include="DataLayer\XmlLoader.cs" />
